maked Crypto Market Making

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 </div>
 
 <div class="about-gravity-team">
-    <div class="about-gravity-team-coteiner">
         <div class="about-gravity-team-header">
             <div class="about-gravity-team-header-name">
                 <h1>About Gravity Team</h1>
@@ -53,41 +52,71 @@
         </div>
         <div class="about-gravity-team-table">
             <ul class="gravity-table">
-                <li class="cell">
+                <li class="cell"  ID="cell_1">
                     <h2 class="cell-name">~$100 billion</h2>
                     <p class="cell-description">cumulative trading
                         volume to date</p>
                 </li>
-                <li class="cell">
+                <li class="cell" ID="cell_highlighted">
                     <h2 class="cell-name">0.8%</h2>
                     <p class="cell-description">of the global crypto spot trading volume</p>
                 </li>
-                <li class="cell">
+                <li class="cell" ID="cell_3">
                     <h2 class="cell-name">~30</h2>
                     <p class="cell-description">Gravity Teammates 
                         (& growing)</p>
                 </li>
-                <li class="cell">
+                <li class="cell" ID="cell_4">
                     <h2 class="cell-name">25+</h2>
                     <p class="cell-description">leading global and local crypto exchanges</p>
                 </li>
-                <li class="cell">
+                <li class="cell" ID="cell_5">
                     <h2 class="cell-name">2017</h2>
                     <p class="cell-description">start, crypto-natives</p>
                 </li>
-                <li class="cell">
+                <li class="cell" ID="cell_6">
                     <h2 class="cell-name">1,200+</h2>
                     <p class="cell-description">crypto-asset pairs</p>
                 </li>
-                <li class="cell">
+                <li class="cell" ID="cell_7">
                     <h2 class="cell-name">24/7</h2>
                     <p class="cell-description">liquidity</p>
                 </li>
-                <li class="cell">
+                <li class="cell" ID="cell_8">
                     <h2 class="cell-name">5 billion+</h2>
                     <p class="cell-description">trades done to date</p>
                 </li>
             </ul>
+    </div>
+</div>
+<div class="crypto-market-making">
+    <div class="crypto-market-making-header"> Crypto Market Making</div>
+     <div class="crypto-market-making-description">  We are a global crypto liquidity provider and algorithmic market maker. We trade digital assets listed on Centralized Exchanges in over 15 countries worldwide. </div>
+
+    <div class="crypto-projects-exchanges">
+        <div class="crypto-prodects">
+            <div class="crypto-h1">Market Making for Crypto Projects</div>
+            <div class="crypto-h2">Accelerate your token’s journey by boosting its liquidity</div>
+            <div class="crypto-p">We invest in building long-term, sustainable relationships and support our projects in their growth journey with our services, industry expertise and network.</div>
+            <button class="crypto-lern-more">
+                <p class="crypto-lern-more-text">Learn more</p>
+                <img src="images/arrow_right.svg" alt="arrow_right">
+            </button>
+        </div>
+        <div class="crypto-prodects-image">
+            <img src="images/exchange-screens.svg" alt="exchange-screens">            
+        </div>
+        <div class="crypto-exchanges">
+            <div class="crypto-h1">Market Making for Crypto Exchanges</div>
+            <div class="crypto-h2">Attract more traders and projects with deep order books & liquidity</div>
+            <div class="crypto-p">Our world-class market making services are proven to help local and emerging exchanges win traders and gain market-leading positions of up to 90% market dominance.</div>
+            <button class="crypto-lern-more">
+                <p class="crypto-lern-more-text">Learn more</p>
+                <img src="images/arrow_right.svg" alt="arrow_right">
+            </button>
+        </div>
+        <div class="crypto-exchanges-image">
+            <img src="images/crypto-market-2.svg" alt="crypto-market">
         </div>
     </div>
 </div>
